<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">unpluged</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world --- !</string>
    <string name="init">iniciar</string>
    
     <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="start_service">Activar portección</string>
    <string name="stop_service">Deshabilitar protección</string>
    <string name="stop_alarm">Parar Alarma</string>
    <string name="more">Mas</string>
    <string name="vibrate">Vibración</string>
    <string name="type_alarm">Tipo de alarma</string>
    <string name="type_alarm_selected">Default</string>
    <string name="alarm_tone">Tono de alarma</string>
    <string name="alarm_tone_selected">Kings of leon</string>
    <string name="vibrate_on_off">Off</string>
    <string name="footer">my.com</string>

</resources>
